Cambio en mediana.html

--- a/mediana/mediana.html
+++ b/mediana/mediana.html
@@ -7,6 +7,10 @@
     <title>Mediana</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Mediana</h1>
+    </header>
+
+    <script src="./mediana.js"></script>
 </body>
 </html>
